Fix wrong font-weight

--- a/packages/core/src/css/core.scss
+++ b/packages/core/src/css/core.scss
@@ -128,7 +128,7 @@
 
   // Font weights
   --way-font-weight-thin: 100;
-  --way-font-weight-ultralight: 200;
+  --way-font-weight-extra-light: 200;
   --way-font-weight-light: 300;
   --way-font-weight-normal: 400;
   --way-font-weight-medium: 500;
